Add handout for week 6

--- a/phil971-kant-rational-agency.org
+++ b/phil971-kant-rational-agency.org
@@ -1075,6 +1075,8 @@ its attendant metaphysics might be understood to be an optional or non-essential
 of his overall view concerning rational agency, particularly as that view is
 developed by Christine Korsgaard.
 
+- [[/materials/handouts/6-kant-reason-compatibilism.pdf][Handout]] for week 6
+
 **** Readings
 
 - Kant:
