--- a/phil971-kant-rational-agency.org
+++ b/phil971-kant-rational-agency.org
@@ -1111,8 +1111,38 @@ developed by Christine Korsgaard.
 
 
 
-*** TODO Week 7 - ’Mesh’ Theories of Rationality
+*** DONE Week 7 - Incorporation, Identification, & ’Mesh’ Theories of Rationality
 SCHEDULED: <2020-09-29 Tue>
+:PROPERTIES:
+:EXPORT_HUGO_TAGS: action agency compatibilism identification incorporation
+:EXPORT_FILE_NAME: week7
+:END:
+
+This week we continue our discussion of Kantian compatibilist theories of
+rationality. We'll look at Harry Frankfurt's influential non-causalist conception of
+intentional action, along with his related conception of the "identification" of an
+agent with its actions. We'll compare it to Henry Allison's influential idea that
+Kant considers rational action to involve "incorporation" of a desire or impulse as
+one's reason.
+
+**** Readings
+- Kant
+   - /[[/materials/readings/kant-incorporation.pdf][Religion Within the Boundaries of Reason Alone]]/ (excerpt): 6:22-26
+      + This is where Kant articulates what Henry Allison calls the "Incorporation
+        Thesis"---i.e. the claim that a desire or impulse constitutes a reason for
+        action only insofar as it has been incorporated by the subject into its maxim
+        of action
+      + Allison, /[[/materials/readings/allison-incorporation.pdf][Kant's Theory of Freedom]]/ (excerpt, see especially pp. 39-40 on incorporation)
+- Frankfurt
+   + "[[/materials/readings/frankfurt-freedom.pdf][Freedom of the Will and the Concept of a Person]]"
+   + "[[/materials/readings/frankfurt-identification.pdf][Identification & Wholeheartedness]]"
+- Other Readings (Optional)
+   - Velleman, "[[/materials/readings/velleman-identification.pdf][Identification & Identity]]" (with a reply by Frankfurt)
+   - Bratman, "[[/materials/readings/bratman-agency.pdf][Planning Agency, Autonomous Agency]]"
+   - Korsgaard, "[[/materials/readings/korsgaard-reflection.pdf][The Authority of Reflection]]" (excerpt)
+   - Schapiro, "[[/materials/readings/schapiro-incorporation.pdf][Foregrounding Desire: A Defense of Kant’s Incorporation Thesis]]"
+     
+    
 
 *** TODO Week 8 - Agency without Agents?
 SCHEDULED: <2020-10-06 Tue>
